--- a/index.html
+++ b/index.html
@@ -24,10 +24,24 @@
                     <hr class="my-4">
                     <div class="row text-center">
                         <div class="col">
-                            <h1>YOU</h1>
+                            <div class="row">
+                                <div class="col">
+                                    <h1><span class="badge badge-pill badge-success">{{ myHealth }}</span></h1>
+                                </div>
+                                <div class="col">
+                                    <h1>YOU</h1>
+                                </div>
+                            </div>
                         </div>
                         <div class="col">
-                            <h1>MONSTER</h1>
+                            <div class="row">
+                                <div class="col">
+                                    <h1>MONSTER</h1>
+                                </div>
+                                <div class="col">
+                                    <h1><span class="badge badge-pill badge-success">{{ monsterHealth }}</span></h1>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <hr>
